--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "wedding_invitation",
+  "name": "wedding-invitation",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "prebuild": "node scripts/update-version.js",
+    "dev": "next dev",
     "build": "next build",
-    "build:fresh": "npm run prebuild && npm run build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.12.1",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.18"
+    "lucide-react": "^0.468.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/kakao-js-sdk": "^1.39.5",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/styled-components": "^5.1.34",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "15.1.0"
   }
 }
