--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^19.0.0",
     "lucide-react": "^0.468.0",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "styled-components": "^6.1.1",
+    "framer-motion": "^11.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
